Trying to fix wrapping issue

--- a/style.scss
+++ b/style.scss
@@ -31,7 +31,6 @@ html {
 	}
 
 	.tag {
-		flex: 0;
 		padding: $input-padding;
 		border-radius: $border-radius;
 		border: 0;
@@ -40,11 +39,10 @@ html {
 	}
 
 	.editing {
-		padding: $input-padding - 1px;
-		border: 1px solid #2980b9;
-		background-color: white;
-		color: black;
-		border-radius: $border-radius;
+		padding: $input-padding;
+		border: none;
+		background-color: inherit;
+		color: inherit;
 	}
 
 	.leftover {
